styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    color: black;
    text-align: center;
}

body {
    margin-bottom: 7.5em;
}

nav {
    width: 100vw;
    max-width: 100%;
    /* background-color: #2a2a46; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 20px 40px 10px;
    user-select: none;
}

nav h1 {
    color: #7510F7;
    font-size: 35px;
    text-transform: uppercase;
    margin-bottom: 0.5em;
}

nav ul li {
    list-style: none;
    display: block;
    text-align: center;
    margin-bottom: 1em;
}

nav ul li a {
    font-size: 19px;
    text-decoration: none;
    text-transform: uppercase;
}

nav ul li a:hover {
    color: #333;
}

.heading {
    position: relative;
    width: 100vw;
    max-width: 100%;
    height: 100vh;
    min-height: 750px;
    max-height: 900px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.heading-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 50%;
    margin-top: 0.75em;
    font-size: 0.9rem;
}

.heading-image {
    display: flex;
    align-items: center;
    max-width: 175px;
    width: 45%;
    margin: 2.5em 0 2em;
}

.heading-image img {
    width: 100%;
    height: 100%;
}

.heading-text p {
    color: black;
}

.img-bottom {
    z-index: -1;
    max-width: 550px;
    width: 100vw;
    /* position: absolute; */
    bottom: 0;
}

.section {
    position: relative;
    height: auto;
    width: 100vw;
    max-width: 100%;
}

.section-1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: visible;
    height: auto;
    background-color: #7510F7;
    padding-bottom: 12.5em;
}

.section-1 h2 {
    text-align: center;
    font-size: 1.25em;
    color: white;
    padding-top: 4em;
    font-weight: 700;
}

p {
    color: white;
    text-align: center;
    font-size: 1.1em;
    padding: 1.5em 2em 0;
    line-height: 1.75em;
}

.table-container {
    position: relative;
    top: -10em;
    margin-top: 2.5em;
    display: flex;
    justify-content: center;
    align-items: center;
}

.table {
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    background-color: white;
    border: 1px solid rgba(100, 100, 100, 0.25);
    width: 65vw;
    max-width: 1500px;
    height: auto;
    box-shadow: 0px 5px 30px rgba(100, 100, 100, 0.25);
}

.table-item {
    border-bottom: 1px solid rgba(100, 100, 100, 0.25);
    height: 33%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1em 2em 3em;
}

h3 {
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 0.75em;
}

h4 {
    font-weight: 600;
    margin-top: 3em;
    color: #7510F7;
}

.table-item p {
    padding: 0;
    margin-top: 0.75em;
    font-size: 1em;
    color: black;
}

.table-item ul {
    margin-top: 0.75em;
    list-style: none;
    line-height: 1.75em;
    text-align: center;
}

.coming-soon {
    position: relative;
    top: -50px;
    margin-bottom: 2em;
}

.section-3 {
    top: -3em;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    max-width: 100%;
}

.section-3 p {
    color: black;
    margin-bottom: 4em;
}

.recent-work-container {
    width: 100%;
    max-width: 2500px;
    height: 105em;
    padding: 0 5em;
    display: grid;
    grid-gap: 2em;
    grid-auto-rows: 1fr;
    grid-auto-columns: 1fr;
    grid-template-areas: 
            "item1"
            "item2"
            "item3"
            "item4"
        ;
}

.recent-work-item {
    background-color: #7510F7;
    border: 1px solid white;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 0 3em;
}

.recent-work-item a {
    text-decoration: none;
    color: white;
    font-weight: 500;
    font-size: 2em;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (min-width: 700px) {
    .heading-text {
        font-size: 1em;
        margin-top: 12.5vh;
    }

    nav {
        flex-direction: row;
    }

    nav ul li {
        display: inline-block;
        margin-left: 40px;
    }

    .recent-work-container {
        grid-template-areas: 
            "item1 item3"
            "item1 item2"
            "item4 item2"
        ;
        height: 52.5em;
        padding: 0 2em;
    }
    
}


@media (min-width: 900px) {
    .heading {
        font-size: 1.25em;
        max-height: 1200px;
    }

    .section-1 h2 {
        font-size: 1.75em;
    }

    .section-1 p {
        width: 50%;
    }

    .table {
        width: 80vw;
        flex-direction: row;
    }

    .table-item {
        padding: 1em 2em 3em;
        width: 33%;
        height: auto;
        border: none;
        border-right: 1px solid rgba(100, 100, 100, 0.25);
        justify-content: flex-start;
    }

    .table-item:nth-last-of-type(1) {
        border: none;
    }

    .recent-work-container {
        grid-template-areas: 
            "item1 item1 item3"
            "item4 item2 item2"
        ;
        height: 35em;
        padding: 0 20vw;
    }
}

@media (min-width: 1200px) {
    .table {
        width: 65vw;
    }
}

